--- a/src/App.sass
+++ b/src/App.sass
@@ -1,2 +1,7 @@
 @import "../node_modules/bulma/bulma.sass"
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+
+.App
+  min-height: 100%
+  height: auto
+  position: relative
