--- a/src/components/Posts/postForm.sass
+++ b/src/components/Posts/postForm.sass
@@ -1,7 +1,6 @@
 .post-form-container
-  display: flex
-  justify-content: center
-  align-items: center
-  .container
-    width: 60%
-    margin-top: 50px
+  margin: 50px
+  width: 60%
+  .control
+    textarea
+      height: 500px
