--- a/src/components/Footer/index.sass
+++ b/src/components/Footer/index.sass
@@ -2,9 +2,9 @@
   display: flex
   justify-content: space-around
   align-items: center
+  clear: both
   position: absolute
   bottom: 0
-  left: 0
   width: 100%
   height: 100px
   background-color: #818181
