--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,14 @@
+html,
 body {
   margin: 0;
   padding: 0;
+  height: 100%;
+
   font-family: sans-serif;
+}
+
+#root {
+  min-height: 100%;
+  height: 100%;
+  position: relative;
 }
