Add markdown editor

--- a/src/App.sass
+++ b/src/App.sass
@@ -1,5 +1,6 @@
 @import "../node_modules/bulma/bulma.sass"
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+@import "../node_modules/_github-markdown-css@2.8.0@github-markdown-css/github-markdown.css"
 
 .App
   min-height: 100%
