--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /*! bulma.io v0.5.0 | MIT License | github.com/jgthms/bulma */
 @import "https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css";
+@import url(../node_modules/_github-markdown-css@2.8.0@github-markdown-css/github-markdown.css);
 @keyframes spinAround {
   from {
     transform: rotate(0deg); }
