--- a/src/components/Home/home.sass
+++ b/src/components/Home/home.sass
@@ -2,3 +2,8 @@
   display: flex
   justify-content: center
   align-items: center
+  flex-direction: column
+  padding-bottom: 100px
+  .field
+    margin-top: 30px
+    margin-bottom: 30px
