--- a/src/components/Home/home.css
+++ b/src/components/Home/home.css
@@ -1,4 +1,9 @@
 .home-container {
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  flex-direction: column;
+  padding-bottom: 100px; }
+  .home-container .field {
+    margin-top: 30px;
+    margin-bottom: 30px; }
