--- a/src/components/Archieve/Timeline/index.sass
+++ b/src/components/Archieve/Timeline/index.sass
@@ -14,5 +14,13 @@
   .timeline-content
     margin-left: 2.2em
     display: none
+    li
+      color: rgb(71, 71, 71)
+      &:hover
+        cursor: pointer
+        color: rgba(71, 71, 71, .7)
+      span
+        padding-left: 2.2em
+        color: rgba(71, 71, 71, .6)
   .is-active
     display: block
