--- a/src/components/Footer/index.sass
+++ b/src/components/Footer/index.sass
@@ -6,6 +6,6 @@
   position: absolute
   bottom: 0
   width: 100%
-  height: 100px
-  background-color: #818181
-  color: #ffffff
+  height: 50px
+  background-color: #f2f2f2
+  color: #aaaaaa
