--- a/src/components/Comments/index.sass
+++ b/src/components/Comments/index.sass
@@ -15,3 +15,9 @@
     display: flex
     flex-direction: column
     justify-content: center
+    .comment-inputbox-wrap
+      padding: .8rem
+      input
+        margin-bottom: .4rem
+      button
+        float: right
