Change some comment style

--- a/src/components/Comments/index.sass
+++ b/src/components/Comments/index.sass
@@ -5,19 +5,24 @@
   display: flex
   justify-content: center
   align-items: center
+  flex-direction: column
+  h1
+    margin-top: 2rem
+    text-shadow: 1px 1px 2px rgb(180, 180, 180)
   .comments-wrap
     border: 1px solid rgb(169, 169, 169)
     border-radius: .2rem
     padding: .8rem
     width: 80%
     height: 100%
-    margin-top: 2rem
     display: flex
     flex-direction: column
     justify-content: center
     .comment-inputbox-wrap
-      padding: .8rem
+      padding: 1.2rem
       input
         margin-bottom: .4rem
       button
         float: right
+      p
+        margin-bottom: .4em
