--- a/src/components/Comments/index.css
+++ b/src/components/Comments/index.css
@@ -4,20 +4,25 @@
   padding-bottom: 150px;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  flex-direction: column; }
+  .comments-container h1 {
+    margin-top: 2rem;
+    text-shadow: 1px 1px 2px #b4b4b4; }
   .comments-container .comments-wrap {
     border: 1px solid darkgray;
     border-radius: .2rem;
     padding: .8rem;
     width: 80%;
     height: 100%;
-    margin-top: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center; }
     .comments-container .comments-wrap .comment-inputbox-wrap {
-      padding: .8rem; }
+      padding: 1.2rem; }
       .comments-container .comments-wrap .comment-inputbox-wrap input {
         margin-bottom: .4rem; }
       .comments-container .comments-wrap .comment-inputbox-wrap button {
         float: right; }
+      .comments-container .comments-wrap .comment-inputbox-wrap p {
+        margin-bottom: .4em; }
